==> gwerwerfwf/stm32f103zet6/智慧农业z(底层驱动)/智能大棚--2023模拟/System/usmart.c <==
#include "usmart.h"
#include "usart.h"
#include "sys.h"

void usmart_reset_runtime(void)
{
	TIM_ClearFlag(TIM4,TIM_FLAG_Update);//ȥԽא׏Ҫ־λ 
	TIM_SetAutoreload(TIM4,0XFFFF);//ݫטװ՘ֵʨ׃սخճ
	TIM_SetCounter(TIM4,0);		//ȥࠕ֨ʱǷքCNT
	usmart_dev.runtime=0;	
}

uint32_t usmart_get_runtime(void)
{
	if(TIM_GetFlagStatus(TIM4,TIM_FLAG_Update)==SET)//՚Ջѐǚݤ,Ӻʺ֨ʱǷӧԶ
	{
		usmart_dev.runtime+=0XFFFF;
	}
	usmart_dev.runtime+=TIM_GetCounter(TIM4);
	return usmart_dev.runtime;		//׵ܘ݆˽ֵ
}

void TIM4_IRQHandler(void)
{ 		    		  			    
	if(TIM_GetITStatus(TIM4,TIM_IT_Update)==SET)//ӧԶא׏
	{
		usmart_dev.scan();	//ִѐusmartɨĨ	
		TIM_SetCounter(TIM4,0);		//ȥࠕ֨ʱǷքCNT
		TIM_SetAutoreload(TIM4,100);//ܖشԭ4քʨ׃		    				   				     	    	
	}				   
	TIM_ClearITPendingBit(TIM4,TIM_IT_Update);  //ȥԽא׏Ҫ־λ    
}

void Timer4_Init(uint16_t arr,uint16_t psc)
{
    TIM_TimeBaseInitTypeDef  TIM_TimeBaseStructure;
	NVIC_InitTypeDef NVIC_InitStructure;

	RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM4, ENABLE); //TIM4ʱדʹŜ 
 
	//TIM4Եʼۯʨ׃
 	TIM_TimeBaseStructure.TIM_Period = arr; //ʨ׃՚Ђһٶټт˂ݾװɫܮ֯քؔ֯טװ՘݄զǷלǚքֵ	 ݆˽ս5000Ϊ500ms
	TIM_TimeBaseStructure.TIM_Prescaler =psc; //ʨ׃ԃ4طΪTIMxʱדƵÊԽ˽քԤؖƵֵ  10Khzք݆˽ƵÊ  
	TIM_TimeBaseStructure.TIM_ClockDivision = 0; //ʨ׃ʱדؖٮ:TDTS = Tck_tim
	TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;  //TIMвʏ݆˽ģʽ
	TIM_TimeBaseInit(TIM4, &TIM_TimeBaseStructure); //ٹߝTIM_TimeBaseInitStructאָ֨քӎ˽ԵʼۯTIMxքʱݤܹ˽եλ
 
	TIM_ITConfig( TIM4, TIM_IT_Update|TIM_IT_Trigger, ENABLE );//TIM4 Պѭټтìԥעא׏

	//TIM4א׏ؖةƤ׃
	NVIC_InitStructure.NVIC_IRQChannel = TIM4_IRQn;  //TIM3א׏
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 3;  //ЈռԅЈܶ03ܶ
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 3;  //ՓԅЈܶ3ܶ
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE; //IRQͨրѻʹŜ
	NVIC_Init(&NVIC_InitStructure);  //ٹߝNVIC_InitStructאָ֨քӎ˽Եʼۯ΢ʨNVIC݄զǷ

	TIM_Cmd(TIM4, ENABLE);  //ʹŜTIM4							 
}
